--- a/resources/views/components/input.edge
+++ b/resources/views/components/input.edge
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-between">
   <label for="{{ id }}" class="block text-sm font-medium leading-6 text-gray-900">{{ label }}<span
       @if(required)
-        <span class="text-indigo-600 font-bold"> *</span>
+        <span class="text-red-600 font-bold"> *</span>
       @end
   </label>
 </div>
