--- a/resources/views/components/modal.edge
+++ b/resources/views/components/modal.edge
@@ -26,11 +26,8 @@
       <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg">
         <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
           <div class="flex">
-            <div class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-green-100 sm:mx-0 sm:h-10 sm:w-10">
-              <i class="bi bi-plus text-3xl flex items-center justify-center text-green-600"></i>
-            </div>
             <div class="mt-3 w-full text-center sm:ml-4 sm:mt-0 sm:text-left">
-              <h2 class="text-lg font-semibold leading-6 text-gray-900" id="modal-title">{{{ await $slots.header() }}}</h2>
+              <h2 class="text-lg font-semibold leading-6 text-gray-900 mb-5" id="modal-title">{{{ await $slots.header() }}}</h2>
               <div class="mt-2">
                 {{{ await $slots.main() }}}
               </div>
