--- a/resources/views/components/button.edge
+++ b/resources/views/components/button.edge
@@ -1,3 +1,5 @@
-<button class="flex justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" {{ $props.serializeExcept(['text']) }}>
+<button
+  class="flex justify-center rounded-md px-3 py-1.5 text-sm font-semibold leading-6 shadow-sm  {{ primary || primary == undefined ? 'bg-indigo-600 text-white hover:bg-indigo-500' : 'bg-white ring-1 ring-inset ring-gray-300 text-gray-900 hover:bg-gray-50'}} {{ newClass }}"
+  {{ $props.serializeExcept(['newClass', 'primary' ]) }}>
   {{{ await $slots.main() }}}
 </button>
