--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -9,7 +9,7 @@
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form action='{{ route('AuthController.auth') }}' class='space-y-6' method="POST">
+    <form action='{{ route('login.auth') }}' class='space-y-6' method="POST">
       <div>
         @!input({ type: 'text', id: 'email', name: 'email', label: 'Email', required: true })
       </div>
@@ -19,8 +19,9 @@
       </div>
 
       <div>
-        <button type="submit"
-          class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Entrar</button>
+        @button({ type: "submit", newClass: 'w-full' })
+          Entrar
+        @end
       </div>
     </form>
 
