--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -32,8 +32,9 @@
       </div>
 
       <div class="flex gap-5">
-        <button type="submit"
-          class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Registrar</button>
+        @button({ type: "submit", newClass: 'w-full' })
+          Registrar
+        @end
         <a href="{{ route('login.show') }}"
           class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0">Cancelar</a>
       </div>
