--- a/resources/views/components/post.edge
+++ b/resources/views/components/post.edge
@@ -17,7 +17,7 @@
     </div>
     <div class="group relative">
       <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
-        <a href="#">
+        <a href="{{ route('posts.index', { id: post.id }) }}">
           <span class="absolute inset-0"></span>
           {{ post.title }}
         </a>
@@ -26,9 +26,9 @@
     </div>
     <div class="w-full flex items-end justify-between mt-8">
       <div class="relative mt-8 flex items-center gap-x-4">
-        <img
-          src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-          alt="" class="h-10 w-10 rounded-full bg-gray-50">
+        <span class="bg-gray-100 rounded-full overflow-hidden w-14 h-14 inline-block">
+          <svg class="w-full text-gray-300 h-full" fill="currentColor" viewBox="0 0 24 24"><path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
+        </span>
         <div class="text-sm leading-6">
           <p class="font-semibold text-gray-900">
             <a href="#">
@@ -36,7 +36,7 @@
               {{ post.creatorUser.name }} {{ post.creatorUser.lastName }}
             </a>
           </p>
-          <p class="text-gray-600">Co-Founder / CTO</p>
+          <p class="text-gray-600">Descrição</p>
         </div>
       </div>
 
