--- a/resources/views/pages/auth/login.edge
+++ b/resources/views/pages/auth/login.edge
@@ -9,7 +9,7 @@
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form action='{{ route('login.auth') }}' class='space-y-6' method="POST">
+    <form action='{{ route('login.login') }}' class='space-y-6' method="POST">
       <div>
         @!input({ type: 'text', id: 'email', name: 'email', label: 'Email', required: true })
       </div>
