--- a/resources/views/components/post.edge
+++ b/resources/views/components/post.edge
@@ -47,7 +47,7 @@
           class="position relative top-[.08rem] bi bi-heart ml-1 hover:text-red-500 cursor-pointer"></i>
         <i id="chat-{{ post.id }}" onclick="teste('chat-{{ post.id }}')" onmouseenter="changeIconOnHover(true, 'chat', {{ post.id }})"
           onmouseleave="changeIconOnHover(false, 'chat', {{ post.id }})"
-          class="bi bi-chat ml-1 hover:text-indigo-500 cursor-pointer"></i>
+          class="bi bi-chat ml-1 hover:text-blue-500 cursor-pointer"></i>
         <i id="star-{{ post.id }}" onclick="teste('star-{{ post.id }}')" onmouseenter="changeIconOnHover(true, 'star', {{ post.id }})"
           onmouseleave="changeIconOnHover(false, 'star', {{ post.id }})"
           class="bi bi-star ml-1 hover:text-yellow-400 cursor-pointer"></i>
