--- a/resources/views/pages/posts/favorite.edge
+++ b/resources/views/pages/posts/favorite.edge
@@ -2,7 +2,7 @@
 @set('title', 'Favoritos')
 
 @section('body')
-  <div x-data="modal" class="bg-white pb-24 sm:pb-32">
+  <div x-data="modal" class="pb-24 sm:pb-32">
     @include('partials/header')
     <div class="mx-auto max-w-7xl px-6 lg:px-8 mt-36">
       <div class="flex items-end justify-between">
