--- a/resources/views/components/toast.edge
+++ b/resources/views/components/toast.edge
@@ -3,25 +3,25 @@
     bg: {
       green: 'bg-green-100',
       red: 'bg-red-100',
-      indigo: 'bg-indigo-100',
+      blue: 'bg-blue-100',
       yellow: 'bg-yellow-100'
     },
     hover: {
       green: 'hover:bg-green-200',
       red: 'hover:bg-red-200',
-      indigo: 'hover:bg-indigo-200',
+      blue: 'hover:bg-blue-200',
       yellow: 'hover:bg-yellow-200'
     },
     text500: {
       green: 'text-green-500',
       red: 'text-red-500',
-      indigo: 'text-indigo-500',
+      blue: 'text-blue-500',
       yellow: 'text-yellow-500'
     },
     text800: {
       green: 'text-green-800',
       red: 'text-red-800',
-      indigo: 'text-indigo-800',
+      blue: 'text-blue-800',
       yellow: 'text-yellow-800'
     },
     title: {
