--- a/resources/views/pages/auth/login.edge
+++ b/resources/views/pages/auth/login.edge
@@ -27,7 +27,7 @@
 
     <p class="mt-10 text-center text-sm text-gray-500">
       Não é um membro?
-      <a href="{{ route('users.create') }}" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Cadastra-se aqui</a>
+      <a href="{{ route('users.create') }}" class="font-semibold leading-6 text-blue-600 hover:text-blue-500">Cadastra-se aqui</a>
     </p>
   </div>
 </div>
