--- a/resources/views/pages/users/index.edge
+++ b/resources/views/pages/users/index.edge
@@ -3,18 +3,66 @@
 
 @section('body')
   @include('partials/header')
-  <div class="mx-auto max-w-7xl px-6 lg:px-8 mt-36 flex flex-col gap-2">
-    <div>
-      <p class="text-lg font-semibold">Nome</p>
-      <p>{{ user.name }} {{ user.lastName }}</p>
+  <div class="mx-auto max-w-7xl px-6 lg:px-8 mt-36 flex flex-col divide-y dark:divide-slate-800">
+    <div class="lg:px-8 sm:px-6 md:grid-cols-3 py-16 px-4 gap-x-10 gap-y-8 grid-cols-1 max-w-7xl grid">
+      <div>
+        <h2 class="text-gray-900 leading-7 text-base font-semibold dark:text-slate-200">Informações Pessoais</h2>
+        <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Mantenha sempre suas informações atualizadas.</p>
+      </div>
+      <form action="" class="md:col-span-2">
+        <div class="grid sm:grid-cols-6 sm:max-w-xl gap-x-8 gap-y-6 grid-cols-1">
+          <div class="gap-x-8 items-center flex col-span-full">
+            <img class="object-cover bg-gray-200 rounded-lg flex-none w-24 h-24" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+            <div>
+              @button({ primary: false })
+                Trocar Avatar
+              @end
+              <p class="leading-5 text-xs mt-2 text-gray-600 dark:text-gray-400">JPG, GIF or PNG. 1MB max.</p>
+            </div>
+          </div>
+          <div class="sm:col-span-3">
+            @!input({ label: 'Nome' })
+          </div>
+          <div class="sm:col-span-3">
+            @!input({ label: 'Sobrenome' })
+          </div>
+          <div class="sm:col-span-full">
+            @!input({ label: 'Email', placeholder: 'email@email' })
+          </div>
+          <div class="sm:col-span-full">
+            @!input({ label: 'Username' })
+          </div>
+        </div>
+        <div class="flex mt-8 justify-center sm:max-w-xl">
+          @button()
+            Salvar
+          @end
+        </div>
+      </form>
     </div>
-    <div>
-      <p class="text-lg font-semibold">Email</p>
-      <p>{{ user.email }} {{ user.email }}</p>
-    </div>
-    <div>
-      <p class="text-lg font-semibold">Username</p>
-      <p>{{ user.username }} {{ user.username }}</p>
+    <div class="lg:px-8 sm:px-6 md:grid-cols-3 py-16 px-4 gap-x-10 gap-y-8 grid-cols-1 max-w-7xl grid">
+      <div>
+        <h2 class="text-gray-900 leading-7 text-base font-semibold dark:text-slate-200">Trocar Senha</h2>
+        <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Atualize sua senha associada à sua conta.</p>
+      </div>
+      <form action="" class="md:col-span-2">
+        <div class="grid sm:grid-cols-6 sm:max-w-xl gap-x-8 gap-y-6 grid-cols-1">
+          <div class="sm:col-span-3">
+            @!input({ label: 'Senha Atual' })
+          </div>
+          <div class="sm:col-span-3">
+            @!input({ label: 'Nova Senha' })
+          </div>
+          <div class="sm:col-span-full">
+            @!input({ label: 'Confirmar Senha' })
+          </div>
+        </div>
+        <div class="flex mt-8 justify-center sm:max-w-xl">
+          @button()
+            Salvar
+          @end
+        </div>
+      </form>
     </div>
   </div>
 @end
