--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -2,7 +2,7 @@
 @set('title', 'ByteBlog')
 
 @section('body')
-<div class="bg-white">
+<div class="bg-white dark:bg-slate-900">
   @include('partials/header')
   <div class="relative isolate px-6 lg:px-8">
     <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
@@ -13,11 +13,11 @@
     </div>
     <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
       <div class="text-center">
-        <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Bem-vindo ao ByteBlog!</h1>
-        <p class="mt-6 text-lg leading-8 text-gray-600">Desperte sua Paixão pela Tecnologia. Registre-se Agora e Faça Parte da Jornada onde os Bits se Transformam em Conhecimento. Compartilhe, Aprenda e Explore o Universo Digital no ByteBlog.</p>
+        <h1 class="text-4xl font-bold tracking-tight text-gray-900 dark:text-slate-200 sm:text-6xl">Bem-vindo ao ByteBlog!</h1>
+        <p class="mt-6 text-lg leading-8 text-gray-600 dark:text-slate-400">Desperte sua Paixão pela Tecnologia. Registre-se Agora e Faça Parte da Jornada onde os Bits se Transformam em Conhecimento. Compartilhe, Aprenda e Explore o Universo Digital no ByteBlog.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6">
           <a href="#"
-            class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Registre-se Agora</a>
+            class="rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600">Registre-se Agora</a>
         </div>
       </div>
     </div>
@@ -32,11 +32,9 @@
   </div>
 </div>
 
-<div class="bg-white pb-24 sm:pb-32">
+<div class="bg-white dark:bg-slate-900 pb-24 sm:pb-32 h-96">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div
-      class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
-
+    <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 dark:border-white/5 pt-10 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
     </div>
   </div>
 </div>
