--- a/resources/views/pages/auth/login.edge
+++ b/resources/views/pages/auth/login.edge
@@ -1,10 +1,10 @@
-@layout('layouts/main')
+@layout('layouts/external')
 @set('title', 'Login')
 
 @section('body')
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <img class="mx-auto h-36 w-auto" src={{ asset('assets/imgs/LogoComplet.svg') }} alt="BlogHub">
+    <img class="mx-auto h-36 w-auto" src={{ asset('assets/imgs/Logo.svg') }} alt="BlogHub">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Faça Login em sua Conta</h2>
   </div>
 
