--- a/resources/views/layouts/external.edge
+++ b/resources/views/layouts/external.edge
@@ -7,7 +7,7 @@
     @entryPointStyles('app')
     @entryPointScripts('app')
   </head>
-  <body class="bg-white dark:bg-slate-900">
+  <body class="bg-white dark:bg-slate-900 h-full">
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
     </nav>
 
