--- a/resources/views/pages/users/create.edge
+++ b/resources/views/pages/users/create.edge
@@ -4,7 +4,7 @@
 @section('body')
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <img class="mx-auto h-36 w-auto" src={{ asset('assets/imgs/LogoComplet.svg') }} alt="BlogHub">
+    <img class="mx-auto h-16 w-auto" src={{ asset('assets/imgs/Logo.svg') }} alt="BlogHub">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Criar uma Conta no ByteBlog</h2>
     <p class="text-center">Insira as informações abaixo</p>
   </div>
