--- a/resources/views/components/post.edge
+++ b/resources/views/components/post.edge
@@ -27,7 +27,11 @@
     <div class="w-full flex items-end justify-between mt-8">
       <div class="relative mt-8 flex items-center gap-x-4">
         <span class="bg-gray-100 rounded-full overflow-hidden w-14 h-14 inline-block">
-          <svg class="w-full text-gray-300 h-full" fill="currentColor" viewBox="0 0 24 24"><path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
+          <svg class="w-full text-gray-300 h-full" fill="currentColor" viewBox="0 0 24 24">
+            <path
+              d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z">
+            </path>
+          </svg>
         </span>
         <div class="text-sm leading-6">
           <p class="font-semibold text-gray-900">
@@ -39,16 +43,16 @@
           <p class="text-gray-600">Descrição</p>
         </div>
       </div>
-
       <div class="mr-5 flex items-center">
         <i id="heart-{{ post.id }}" onclick="teste('heart-{{ post.id }}')"
           onmouseenter="changeIconOnHover(true, 'heart', {{ post.id }})"
           onmouseleave="changeIconOnHover(false, 'heart', {{ post.id }})"
           class="position relative top-[.08rem] bi bi-heart ml-1 hover:text-red-500 cursor-pointer"></i>
-        <i id="chat-{{ post.id }}" onclick="teste('chat-{{ post.id }}')" onmouseenter="changeIconOnHover(true, 'chat', {{ post.id }})"
-          onmouseleave="changeIconOnHover(false, 'chat', {{ post.id }})"
-          class="bi bi-chat ml-1 hover:text-blue-500 cursor-pointer"></i>
-        <i id="star-{{ post.id }}" onclick="teste('star-{{ post.id }}')" onmouseenter="changeIconOnHover(true, 'star', {{ post.id }})"
+        <span class="text-xs ml-1">113</span>
+        <a href="{{ route('posts.index', { id: post.id }) }}" class="bi bi-chat ml-1 hover:text-blue-500 cursor-pointer"></a>
+        <span class="text-xs ml-1" x-show="{{ post.$extras.comments_count }}">{{ post.$extras.comments_count }}</span>
+        <i id="star-{{ post.id }}" onclick="teste('star-{{ post.id }}')"
+          onmouseenter="changeIconOnHover(true, 'star', {{ post.id }})"
           onmouseleave="changeIconOnHover(false, 'star', {{ post.id }})"
           class="bi bi-star ml-1 hover:text-yellow-400 cursor-pointer"></i>
       </div>
