--- a/resources/views/components/textarea.edge
+++ b/resources/views/components/textarea.edge
@@ -3,61 +3,73 @@
     <img class="bg-gray-50 rounded-full flex-none w-6 h-6"
       src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
       alt="">
-    <form class="flex-auto relative" action="" method="POST">
-      <div class="ring-1 shadow-sm pb-12 rounded-lg overflow-hidden ring-inset ring-gray-300">
+    <div class="ring-1 w-full shadow-sm rounded-lg overflow-hidden ring-inset ring-gray-300">
+      <div class="pr-2 pl-3 pt-4">
         <label class="sr-only" for="textarea">Add seu comentário</label>
-        <textarea id="textarea" value="{{ flashMessages.get(name, '') ? flashMessages.get(name, '') : '' }}"
-          class="focus:outline-none text-start px-3 sm:leading-6 sm:text-sm text-gray-900 py-[.375rem] bg-transparent border-0 resize-none w-full block {{ newClass }}"
-          {{ $props.serializeExcept(['newClass', 'emojis']) }}></textarea>
+        <textarea id="textarea" @input="countCharacters" value="{{ flashMessages.get(name, '') ? flashMessages.get(name, '') : '' }}"
+          class="focus:outline-none text-start px-3 sm:leading-6 sm:text-sm text-gray-900 bg-transparent border-0 resize-none w-full block {{ newClass }}"
+          {{ $props.serializeExcept(['newClass', 'emojis' ]) }}></textarea>
       </div>
-      <div class="pr-2 pl-3 py-2 justify-between flex bottom-0 inset-x-0 absolute">
-        <div class="items-center flex">
-          <div class="">
-            <button type="button"
-              class="text-gray-400 hover:text-gray-700 rounded-full justify-center items-center w-10 h-10 flex -m-[.625rem]">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"
-                class="w-5 h-5">
-                <path fill-rule="evenodd"
-                  d="M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.368 6.36l-3.455 3.553A2.625 2.625 0 119.52 9.52l3.45-3.451a.75.75 0 111.061 1.06l-3.45 3.451a1.125 1.125 0 001.587 1.595l3.454-3.553a3 3 0 000-4.242z"
-                  clip-rule="evenodd"></path>
-              </svg>
-            </button>
-          </div>
-          <div class="ml-3 items-center flex">
-            <div class="relative">
-              <button type="button" @click="toggle" class="text-gray-400 hover:text-gray-700">
-                <i class="bi bi-emoji-smile-fill"></i>
+      <div class="pr-2 pl-3 pb-2 bottom-0 inset-x-0">
+        <div x-show="open" x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0"
+          x-transition:enter-end="opacity-100" x-transition:leave="transition ease-in duration-300"
+          x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" @click.outside="disable" x-cloak
+          class="h-36 w-full overflow-auto transition-all ease-in-out duration-300">
+          <ul id="emojiList" class="py-1 grid grid-cols-12" role="none">
+            @each(emoji in emojis)
+            <li @click="insertEmoji" class="cursor-pointer text-base" emoji-name="{{ emoji.description }}">{{
+              emoji.emoji }}
+            </li>
+            @end
+          </ul>
+        </div>
+        <div class="flex justify-between items-center mt-2 relative">
+          <div class="items-center flex">
+            <div class="">
+              <button type="button"
+                class="text-gray-400 hover:text-gray-700 rounded-full justify-center items-center w-10 h-10 flex -m-[.625rem]">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"
+                  class="w-5 h-5">
+                  <path fill-rule="evenodd"
+                    d="M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.368 6.36l-3.455 3.553A2.625 2.625 0 119.52 9.52l3.45-3.451a.75.75 0 111.061 1.06l-3.45 3.451a1.125 1.125 0 001.587 1.595l3.454-3.553a3 3 0 000-4.242z"
+                    clip-rule="evenodd"></path>
+                </svg>
               </button>
             </div>
+            <div class="ml-3 items-center flex">
+              <div class="relative">
+                <button type="button" @click="toggle" class="text-gray-400 hover:text-gray-700">
+                  <i class="bi bi-emoji-smile-fill"></i>
+                </button>
+              </div>
+            </div>
           </div>
-        </div>
-        @button({ primary: false, type: 'submit' })
+          <p class="text-gray-400 text-xs">Caracteres restante: <span id="countCharacter">200</span></p>
+          @button({ primary: false, type: 'submit' })
           Comentário
-        @end
+          @end
+        </div>
       </div>
-    </form>
-  </div>
-  <div x-show="open" @click.outside="disable" x-cloak x-transition:enter="transition ease-out duration-100"
-    x-transition:enter-start="opacity-0 scale-95" x-transition:enter-end="opacity-100 scale-100"
-    x-transition:leave="transition ease-in duration-75" x-transition:leave-start="opacity-100 scale-100"
-    x-transition:leave-end="opacity-0 scale-95"
-    class="absolute right-20 top-[5.5rem] z-10 mt-2 p-2 origin-top-left rounded-md bg-white dark:bg-slate-800 shadow-md ring-1 ring-black ring-opacity-5 focus:outline-none">
-    <div class="mb-2">
-      @!input({ id: 'emojiSearch', placeholder: 'Buscar' })
-    </div>
-    <div class="h-52 w-60 overflow-auto">
-      <ul id="emojiList" class="py-1 grid grid-cols-8" role="none">
-        @each(emoji in emojis)
-          <li @click="insertEmoji" class="cursor-pointer text-base" emoji-name="{{ emoji.slug }}" >{{ emoji.character }}</li>
-        @end
-      </ul>
     </div>
   </div>
 </div>
 <script>
   function insertEmoji(e) {
     const textarea = document.getElementById('textarea')
+    const countContainer = document.getElementById('countCharacter')
 
-    textarea.value += e.target.innerText
+    if(textarea.value.length <= 200) {
+      textarea.value += e.target.innerText
+      countContainer.innerHTML = 200 - textarea.value.length
+    }
+  }
+
+  function countCharacters(e) {
+    const countContainer = document.getElementById('countCharacter')
+
+    if(e.target.value.length <= 200)
+      countContainer.innerHTML = 200 - e.target.value.length
+    else
+      e.target.value = e.target.value.substring(0, 200)
   }
 </script>
