--- a/resources/views/pages/posts/myShow.edge
+++ b/resources/views/pages/posts/myShow.edge
@@ -16,13 +16,19 @@
         </div>
       </div>
       <div
-        class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+        class="mx-auto min-h-fit mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
         @if(posts.length > 0)
           @each(post in posts)
             @!post({ post: post })
           @end
         @else
-          <p>Nenhuma postagem encontrada.</p>
+          <button @click="toggle" class="py-12 px-4 w-[22rem] border-2 border-dashed border-gray-300 hover:border-gray-400 rounded-lg h-72">
+            <div class="text-center">
+              <i class="text-4xl bi bi-plus-square"></i>
+              <h3 class="text-gray-900 font-semibold text-sm mt-2">Sem Postagem</h3>
+              <p class="text-gray-500 text-sm mt-1">Comece criando uma nova postagem.</p>
+            </div>
+          </button>
         @end
       </div>
     </div>
