--- a/resources/views/pages/users/create.edge
+++ b/resources/views/pages/users/create.edge
@@ -35,8 +35,8 @@
         @button({ type: "submit", newClass: 'w-full' })
           Registrar
         @end
-        <a href="{{ route('login.show') }}"
-          class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0">Cancelar</a>
+        <button type="button" @click="() => { history.back() }"
+          class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0">Cancelar</button>
       </div>
     </form>
   </div>
