--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -15,7 +15,7 @@
         <h1 class="text-4xl font-bold tracking-tight text-gray-900 dark:text-slate-200 sm:text-6xl">Bem-vindo ao ByteBlog!</h1>
         <p class="mt-6 text-lg leading-8 text-gray-600 dark:text-slate-400">Desperte sua Paixão pela Tecnologia. Registre-se Agora e Faça Parte da Jornada onde os Bits se Transformam em Conhecimento. Compartilhe, Aprenda e Explore o Universo Digital no ByteBlog.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6">
-          <a href="#"
+          <a href="{{ route('users.create') }}"
             class="rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600">Registre-se Agora</a>
         </div>
       </div>
@@ -31,9 +31,22 @@
   </div>
 </div>
 
-<div class="bg-white dark:bg-slate-900 pb-24 sm:pb-32 h-96">
+<div class="bg-white dark:bg-slate-900 pb-24 sm:pb-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 dark:border-white/5 pt-10 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+      @if(posts.length > 0)
+          @each(post in posts)
+            @!post({ post: post })
+          @end
+        @else
+          <a  href="{{ auth.isAuthenticated ? route('posts.myShow', {id: auth.user.id }) : route('users.create') }}" class="z-10 py-12 px-4 w-[22rem] border-2 border-dashed border-gray-300 hover:border-gray-400 rounded-lg h-72 flex">
+            <div class="text-center m-auto">
+              <i class="text-4xl bi bi-plus-square"></i>
+              <h3 class="text-gray-900 font-semibold text-sm mt-2">Sem Postagem</h3>
+              <p class="text-gray-500 text-sm mt-1">Comece criando uma nova {{ auth.isAuthenticated ? 'Postagem' : 'Conta'}}.</p>
+            </div>
+          </a>
+        @end
     </div>
   </div>
 </div>
