--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -7,7 +7,7 @@
     @entryPointStyles('app')
     @entryPointScripts('app')
   </head>
-  <body class="bg-white dark:bg-slate-900 flex flex-col justify-between">
+  <body class="bg-white dark:bg-slate-900 grid grid-flow-row min-h-screen">
     @include('partials/header')
 
     <main>
