--- a/resources/views/components/post.edge
+++ b/resources/views/components/post.edge
@@ -45,12 +45,13 @@
       </div>
       <div class="mr-5 flex items-center">
         @if(auth.isAuthenticated)
-        <i id="heart-{{ post.id }}" @click="like('{{ route('posts.like', { id: post.id }) }}')"
-          class="position relative top-[.08rem] bi {{ await post.liked(auth.user) ? 'bi-heart-fill text-red-400' : 'bi-heart' }} ml-1 hover:text-red-500 cursor-pointer"></i>
-        <span id="heart-count" class="text-xs ml-1" x-show="{{ post.$extras.usersLike_count }}">{{
-          post.$extras.usersLike_count }}</span>
-        <i id="star-{{ post.id }}" @click="favorite('{{ route('posts.favorite.create', { id: post.id }) }}')"
-          class="bi {{ await post.favorited(auth.user) ? 'bi-star-fill text-yellow-400' : 'bi-star' }} ml-1 hover:text-yellow-400 cursor-pointer"></i>
+        @!likeButton({ data: post, url: 'posts.like', type: 'post' })
+        @!favoriteButton({ post })
+        @else
+        <button type="button" id="heart-{{ post.id }}"
+            class="position relative top-[.08rem] bi bi-heart-fill text-red-400 ml-1 cursor-default"></button>
+          <span id="heart-count" class="text-xs ml-1" x-show="{{ post.$extras.usersLike_count }}">{{
+            post.$extras.usersLike_count }}</span>
         @end
         <a href="{{ route('posts.index', { id: post.id }) }}"
           class="bi bi-chat ml-1 hover:text-blue-500 cursor-pointer"></a>
@@ -59,54 +60,3 @@
     </div>
   </div>
 </article>
-<script>
-  async function favorite(url) {
-    const response = await fetch(url)
-    const data = await response.json()
-    const favoriteButton = document.getElementById('star-{{ post.id }}')
-
-    animation('star-{{ post.id }}')
-
-    if (data.favorited) {
-      favoriteButton.classList.remove('bi-star')
-      favoriteButton.classList.add('bi-star-fill')
-      favoriteButton.classList.add('text-yellow-400')
-    } else {
-      favoriteButton.classList.remove('bi-star-fill')
-      favoriteButton.classList.add('bi-star')
-      favoriteButton.classList.remove('text-yellow-400')
-    }
-  }
-
-  async function like(url) {
-    const response = await fetch(url)
-    const data = await response.json()
-    const likeButton = document.getElementById('heart-{{ post.id }}')
-    const heartCount = document.getElementById('heart-count')
-
-    animation('heart-{{ post.id }}')
-
-    if (data.liked) {
-      likeButton.classList.remove('bi-heart')
-      likeButton.classList.add('bi-heart-fill')
-      likeButton.classList.add('text-red-400')
-      heartCount.style.display = 'block'
-      heartCount.innerHTML = Number(heartCount.innerHTML) + 1
-    } else {
-      likeButton.classList.remove('bi-heart-fill')
-      likeButton.classList.add('bi-heart')
-      likeButton.classList.remove('text-red-400')
-      heartCount.innerHTML = Number(heartCount.innerHTML) - 1
-      if (heartCount.innerHTML == '0')
-        heartCount.style.display = 'none'
-    }
-  }
-
-  function animation(id) {
-    const heartElement = document.getElementById(id)
-    heartElement.classList.add('animate-likeAnimation')
-    setTimeout(function () {
-      heartElement.classList.remove('animate-likeAnimation')
-    }, 900)
-  }
-</script>
