--- a/resources/views/components/toast.edge
+++ b/resources/views/components/toast.edge
@@ -1,4 +1,4 @@
-<div class="fixed top-0 right-0 overflow-hidden z-50">
+<div class="fixed bottom-0 right-0 overflow-hidden z-50">
   @set('color', {
     bg: {
       green: 'bg-green-100',
