--- a/resources/views/pages/posts/index.edge
+++ b/resources/views/pages/posts/index.edge
@@ -7,11 +7,17 @@
     <div>
       <div class="flex items-end gap-4 mx-auto max-w-2xl lg:mx-0">
         <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">{{ capitalCase(post.title) }}</h2>
-        <span class="text-lg font-semibold ml-1 text-red-500">
-          <button class="text-base bi bi-heart-fill text-red-500"></button>
-          {{ post.$extras.usersLike_count }}
-        </span>
-        <button class="text-lg bi bi-star-fill text-yellow-500"></button>
+        <div class="flex items-center">
+          @if(auth.isAuthenticated)
+          @!likeButton({ data: post, url: 'posts.like', type: 'post' })
+          @!favoriteButton({ post })
+          @else
+          <button type="button" id="heart-{{ post.id }}"
+            class="position relative top-[.08rem] bi bi-heart-fill text-red-400 ml-1 cursor-default"></button>
+          <span id="heart-count" class="text-xs ml-1" x-show="{{ post.$extras.usersLike_count }}">{{
+            post.$extras.usersLike_count }}</span>
+          @end
+        </div>
       </div>
       <p class="mt-2 text-lg leading-8 text-gray-600">Descubra os Detalhes Intrigantes de {{ capitalCase(post.title) }}.
       </p>
@@ -64,74 +70,21 @@
           class="xl:pt-16 xl:pb-17 xl:px-16 lg:row-end-2 lg:col-span-2 lg:row-span-2 sm:pb-14 sm:px-8 sm:rounded-lg sm:mx-0 ring-gray-900/5 dark:ring-white/5 dark:text-slate-400 ring-1 py-8 px-4 mx-4 gap-8 flex flex-col text-justify">
           {{ nl2br(e(post.content)) }}
         </div>
-        <div class="lg:col-start-3">
+        <div class="lg:col-start-3" x-data="{ reply: false, placeholder: 'Add seu comentário', commentId: 0, toggleReply(placeholder, commentId) { this.reply = !this.reply; this.placeholder = placeholder; this.commentId = commentId } }">
           <h2 class="text-gray-900 leading-6 font-semibold text-sm">Comentários</h2>
           <ul class="mt-6">
             @each(comment in comments)
-            <li class="flex relative gap-x-4 mt-2">
-              <div class="justify-center flex absolute -bottom-6 left-0 top-0 w-6">
-                <div class="w-[1px] bg-gray-200"></div>
-              </div>
-              <img class="bg-gray-50 rounded-full flex-none -left-1 w-8 h-8 relative"
-                src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                alt="">
-              <div class="ring-gray-200 ring-inset ring-1 p-3 rounded-md flex-auto">
-                <div class="gap-x-4 justify-between flex">
-                  <div class="text-gray-500 leading-5 text-xs py-[.125rem]">
-                    <span class="text-gray-900 font-medium">{{ comment.user.name }} {{ comment.user.lastName }}</span>
-                    comentou
-                  </div>
-                  <time class="text-gray-500 leading-5 text-xs flex-none py-[.125rem]">
-                    {{ prettyTime(comment.createdAt) }}
-                  </time>
-                </div>
-                <p class="text-gray-900 leading-6 text-sm">{{ comment.content }}</p>
-                <div class="flex justify-between">
-                  <button class="text-xs text-blue-500 font-semibold">Responder</button>
-                  <a href="">
-                    <i class="bi bi-heart"></i>
-                  </a>
-                </div>
-                <ul class="{{ comment.reply &&  mt-6 }}">
-                  @each(reply in comment.reply)
-                  <li class="flex relative gap-x-4">
-                    <div class="justify-center flex absolute -bottom-6 left-0 top-0 w-6">
-                      <div class="w-[1px] bg-gray-200"></div>
-                    </div>
-                    <img class="bg-gray-50 rounded-full flex-none w-6 h-6 relative"
-                      src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                      alt="">
-                    <div class="rounded-md flex-auto">
-                      <div class="gap-x-4 justify-between flex">
-                        <div class="text-gray-500 leading-5 text-xs py-[.125rem]">
-                          <span class="text-gray-900 font-medium">Chelsea Hagon</span>
-                          comentou
-                        </div>
-                        <time class="text-gray-500 leading-5 text-xs flex-none py-[.125rem]">
-                          2d ago
-                        </time>
-                      </div>
-                      <p class="text-gray-900 leading-6 text-sm">Called client, they reassured me the invoice would be
-                        paid by the 25th.</p>
-                      <div class="flex justify-between">
-                        <button class="text-xs text-blue-500 font-semibold">Responder</button>
-                        <a href="">
-                          <i class="bi bi-heart"></i>
-                        </a>
-                      </div>
-                    </div>
-                  </li>
-                  @end
-                </ul>
-              </div>
-            </li>
+            @!comment({ comment })
             @end
           </ul>
           <div class="">
             @if(auth.isAuthenticated)
-            <form action="{{ route('posts.comments.create', { id: post.id }) }}" method="POST">
-              @!textarea({ rows: 2, placeholder: 'Add seu comentário', name: 'comment', emojis: emojis })
-            </form>
+              <form x-show="!reply" action="{{ route('posts.comments.create', { id: post.id }) }}" method="POST">
+                @!textarea({ id: 1, rows: 2, name: 'content', emojis: emojis })
+              </form>
+              <form x-show="reply" @submit.prevent="onSubmit" method="POST">
+                @!textarea({ id: 2, rows: 2, name: 'content', emojis: emojis })
+              </form>
             @end
           </div>
         </div>
@@ -139,4 +92,15 @@
     </div>
   </main>
 </div>
+<script>
+  async function onSubmit(e) {
+    const response = await fetch(`/posts/comments/replies/${this.commentId}`, {
+      method: "POST",
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ content: e.target.elements.content.value })
+    })
+
+    location.reload()
+  }
+</script>
 @end
